--- a/src/HeaderUpdated.css
+++ b/src/HeaderUpdated.css
@@ -7,6 +7,11 @@
 }
 .hu_logo{
     flex: 0.2   ;
+    display: flex;
+    align-items: center;
+}
+.hu_logo img{
+    width:140px;
 }
 .hu_nav{
     flex: 0.6;
