--- a/src/CustomerDash.css
+++ b/src/CustomerDash.css
@@ -1,5 +1,8 @@
 .cd_orders{
-   
+   flex: 0.5;
+   margin-top: 3%;
+   height: 75vh;
+   overflow-y: auto;
 }
 .ord_img img{
     width: 10vw;
@@ -11,15 +14,64 @@
 }
 .cd_main{
     padding: 2%;
+    display: flex
+    ;
+    
 }
 .orderbox{
     border: 1px solid gray;
-    width: 40%;
+    width: 80%;
     border-radius: 12px;
     margin: 2%;
     padding: 1%;
+    
 }
 .dec{
     color: white;
     text-decoration: none;
+}
+.cu_csord{
+    margin-top: 3%;
+    flex: 0.5;
+    overflow-y: auto;
+    height: 75vh;
+}
+
+.cancel_order{
+   
+  text-align: end;
+}
+.cancel_order  button{
+    color: white;
+    font-size: 15px;
+    padding: 2%;
+    background-color: black;
+    border: none;
+    border-radius: 7px;
+    font-weight: 550;
+}
+.cancel_order  button:hover{
+    background-color: rgb(228, 71, 71);
+    cursor: pointer;
+}
+.cancel_custom button{
+    color: white;
+    font-size: 15px;
+    padding: 2%;
+    background-color: black;
+    border: none;
+    border-radius: 7px;
+    font-weight: 550;
+}
+.cancel_custom  button:hover{
+    background-color: rgb(228, 71, 71);
+    cursor: pointer;
+}
+.cancel_custom{
+    display: flex;
+    justify-content: space-between;
+}
+
+#green:hover{
+    background-color: green;
 }
